--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <div class="rela-block page">
 
     <div class="rela-block top-bar">
-        <div class="caps name"><div class="abs-center">David MÃ¡rquez</div></div>
+        <div class="caps name"><div class="abs-center">David Márquez</div></div>
     </div>
 
     <div class="side-bar">
