--- a/cv.html
+++ b/cv.html
@@ -48,7 +48,7 @@
         <p class="rela-block list-thing">Communication</p><br><br>
 
         <p class="rela-block caps side-header">Education</p>
-        <p class="rela-block list-thing">Technical Engineer in Computing Systems, University of MÃ¡laga (not finished)</p>
+        <p class="rela-block list-thing">Technical Engineer in Computing Systems, University of Málaga (not finished)</p>
         <p class="rela-block list-thing">Master in Home Automation, University Carlos III of Madrid </p><br><br>
 
         <p class="rela-block caps side-header">Hobbies</p>
@@ -67,7 +67,7 @@
 
         <div class="rela-block caps greyed">Experience</div>
 
-        <h3>2.006-today BartolomÃ© Consultores</h3>
+        <h3>2.006-today Bartolomé Consultores</h3>
         <p class="light">IT Manager</p>
         <p class="justified">Started here as SysAdmin but evolved over the years. The company was only 12 employees when they hired me but, as they shifted from cash registers to PC based POS Systems, my role changed from not just SysAdmin to IT Manager but also doing many sales-comercial-marketing tasks.
         <br><br>In the tech area, I can highlight this tasks/projects:. </p>
