--- a/cv.html
+++ b/cv.html
@@ -24,7 +24,7 @@
     <div class="side-bar">
         <p class="rela-block caps side-header">Contact Info</p>
         <p>
-        <a href="www.linkedin.com/in/david-mr">www.linkedin.com/in/david-mr</a><br>
+        <a href="https://www.linkedin.com/in/david-mr">www.linkedin.com/in/david-mr</a><br>
         david@marquezruiz.com<br>
     	+34 696862311
     	</p><br><br>
