--- a/cv.html
+++ b/cv.html
@@ -27,17 +27,17 @@
         <a href="https://www.linkedin.com/in/david-mr">www.linkedin.com/in/david-mr</a><br>
         david@marquezruiz.com<br>
     	+34 696862311
-    	</p><br><br>
+    	</p><br>
 
         <p class="rela-block caps side-header">Languages</p>
         <p class="rela-block list-thing">English</p>
-        <p class="rela-block list-thing">Spanish</p><br><br>
+        <p class="rela-block list-thing">Spanish</p><br>
 
         <p class="rela-block caps side-header">Expertise</p>
         <p class="rela-block list-thing">DevOps, Team Leader</p>
         <p class="rela-block list-thing">IT Manager, VMs, NAS, Cloud</p>
         <p class="rela-block list-thing">Networking, Wi-Fi, Mikrotik</p>
-        <p class="rela-block list-thing">ERP Software, Consultant, Developer, Implementer</p><br><br>
+        <p class="rela-block list-thing">ERP Software, Consultant, Developer, Implementer</p><br>
 
         <p class="rela-block caps side-header">Skills</p>
         <p class="rela-block list-thing">Time Management</p>
@@ -46,11 +46,11 @@
         <p class="rela-block list-thing">SQL Expert</p>
         <p class="rela-block list-thing">Teamwork</p>
         <p class="rela-block list-thing">Self-taught</p>
-        <p class="rela-block list-thing">Communication</p><br><br>
+        <p class="rela-block list-thing">Communication</p><br>
 
         <p class="rela-block caps side-header">Education</p>
         <p class="rela-block list-thing">Technical Engineer in Computing Systems, University of Málaga (not finished)</p>
-        <p class="rela-block list-thing">Master in Home Automation, University Carlos III of Madrid </p><br><br>
+        <p class="rela-block list-thing">Master in Home Automation, University Carlos III of Madrid </p><br>
 
         <p class="rela-block caps side-header">Hobbies</p>
         <p class="rela-block list-thing">Traveling</p>       
@@ -71,10 +71,13 @@
         <h3>2.006-today Bartolomé Consultores</h3>
         <p class="light">IT Manager</p>
         <p class="justified">Started here as SysAdmin but evolved over the years. The company was only 12 employees when they hired me but, as they shifted from cash registers to PC based POS Systems, my role changed from not just SysAdmin to IT Manager but also doing many sales-comercial-marketing tasks.
-        <br><br>In the tech area, I can highlight this tasks/projects:. </p>
+        
+        <br><br>In the tech area, I can highlight this tasks/projects: </p>
         <p class="list-thing">Sysadmin, DevOps and leader of the development team.</p>
         <p class="list-thing">Decision taker on what new software or hardware is interesting to sell.</p>
         <p class="list-thing">Preparing the base OS image to install on every POS we sell (hundreds a year).</p>
+
+        <br><br>In the sales area, I can highlight this tasks/projects:</p>
         <p class="list-thing">Train new staff on the ERP and other software we sell</p>
         <p class="list-thing">Preparing and showing ad-hoc demos to possible new customers, either at our showroom or by telco.</p>
         <p class="list-thing">On big accounts customers I also do after sales tasks like consulting, training to management staff, looking for new sales opportunities and creating links with them encouraging client loyalty.</p>
@@ -91,10 +94,11 @@
         <p class="list-thing">Sysadmin and developer doing custom modules to the existing ERP at EDC Group spanish arm.</p>
 
 <br>
+		<div class="rela-block caps greyed printer-only">Experience</div>
 
         <h3>1.996-1.999 Campus Party</h3>
         <p class="light">President of #EnRED.</p>
-        <p class="justified">Co-created the #EnRED youth Association, and worked there <b>creating the first Lan-Party in Spain and maybe in the world</b>. Main tasks on this job: 
+        <p class="justified">Co-created the #EnRED youth Association, and worked there <b>creating the first Lan-Party in Spain</b>. Main tasks on this job: 
         <p class="list-thing">Look for sponsors, getting very big companies like Telefonica, 3COM, OKI, Unicaja, DELL, Guillemot..- to work with us.</p>
         <p class="list-thing">Look for institutions support, from Ayuntamiento de BenalmÃ¡dena to Ministerio de Trabajo, including Injuve, Ministerio de Defensa and many others. </p>
         <p class="list-thing">Coordinate and execute most of the technical work. Website, local network, servers, tournaments rules, internet connectivity.</p> 
