--- a/cv.html
+++ b/cv.html
@@ -70,19 +70,19 @@
 
         <h3>2.006-today Bartolomé Consultores</h3>
         <p class="light">IT Manager</p>
-        <p class="justified">Started here as SysAdmin but evolved over the years. The company was only 12 employees when they hired me but, as they shifted from cash registers to PC based POS Systems, my role changed from not just SysAdmin to IT Manager but also doing many sales-comercial-marketing tasks.
+        <p class="justified">Started here as SysAdmin but evolved over the years. The company was only 12 employees when they hired me but, as they shifted from cash registers to PC based POS Systems, my role changed from not just SysAdmin to IT Manager but also doing many sales-comercial-marketing tasks.</p>
         
-        <br><br>In the tech area, I can highlight this tasks/projects: </p>
+     	In the tech area, I can highlight this tasks/projects: 
         <p class="list-thing">Sysadmin, DevOps and leader of the development team.</p>
         <p class="list-thing">Decision taker on what new software or hardware is interesting to sell.</p>
         <p class="list-thing">Preparing the base OS image to install on every POS we sell (hundreds a year).</p>
-
-        <br><br>In the sales area, I can highlight this tasks/projects:</p>
+		<br>
+        In the sales area, I can highlight this tasks/projects:
         <p class="list-thing">Train new staff on the ERP and other software we sell</p>
         <p class="list-thing">Preparing and showing ad-hoc demos to possible new customers, either at our showroom or by telco.</p>
         <p class="list-thing">On big accounts customers I also do after sales tasks like consulting, training to management staff, looking for new sales opportunities and creating links with them encouraging client loyalty.</p>
 
-<br>
+	<br>
 
         <h3>1.999-2005 Freelance</h3>
         <p class="light"></p>
@@ -93,12 +93,13 @@
         <p class="list-thing">Develop from scratch the billing software for a factory.</p>
         <p class="list-thing">Sysadmin and developer doing custom modules to the existing ERP at EDC Group spanish arm.</p>
 
-<br>
+	<br>
+
 		<div class="rela-block caps greyed printer-only">Experience</div>
 
         <h3>1.996-1.999 Campus Party</h3>
         <p class="light">President of #EnRED.</p>
-        <p class="justified">Co-created the #EnRED youth Association, and worked there <b>creating the first Lan-Party in Spain</b>. Main tasks on this job: 
+        <p class="justified">Co-founded the #EnRED youth Association, and worked there <b>creating the first Lan-Party in Spain</b>. Main tasks on this job: 
         <p class="list-thing">Look for sponsors, getting very big companies like Telefonica, 3COM, OKI, Unicaja, DELL, Guillemot..- to work with us.</p>
         <p class="list-thing">Look for institutions support, from Ayuntamiento de BenalmÃ¡dena to Ministerio de Trabajo, including Injuve, Ministerio de Defensa and many others. </p>
         <p class="list-thing">Coordinate and execute most of the technical work. Website, local network, servers, tournaments rules, internet connectivity.</p> 
