--- a/cv.html
+++ b/cv.html
@@ -70,17 +70,17 @@
 
         <h3>2.006-today Bartolomé Consultores</h3>
         <p class="light">IT Manager</p>
-        <p class="justified">Started here as SysAdmin but evolved over the years. The company was only 12 employees when they hired me but, as they shifted from cash registers to PC based POS Systems, my role changed from not just SysAdmin to IT Manager but also doing many sales or management tasks.</p>
+        <p class="justified">Started here as SysAdmin but evolved over the years. The company was only 12 employees when they hired me but over these years we've grow to almost 40 at the moment and my role now is not only an internal promotion but also the result of my efford and performance.</p>
         
      	In the tech area, I can highlight this tasks/projects: 
         <p class="list-thing">Sysadmin, DevOps and leader of the development team.</p>
         <p class="list-thing">In 2.007 moved all internal NAS/email infraestructure from a classic Windows/Exchange setup to GSuite.</p>
         <p class="list-thing">Decision taker on what new software or hardware is interesting to sell.</p>
-        <p class="list-thing">Preparing the base OS image to install on every POS we sell (hundreds a year).</p>
+        <p class="list-thing">Preparing and updating the base OS image to install on every POS we sell (hundreds a year).</p>
 		<p class="list-thing">Now working on a bid data project creating a Bussines Inteligence dashboard for hospitality using data from hundreds of restaurants.</p>
 		<br>
-        In the sales-management area, I can highlight this tasks/projects:
-        <p class="list-thing">Help in the shifting of the company to PC POS World, including changing the company brand and logo.</p>
+        In the management and sales area, I can highlight this tasks/projects:
+        <p class="list-thing">Help in the shifting of the company from CashRegisters sellers to POS and ERP Consultant, including changing the company brand and logo.</p>
         <p class="list-thing">Train new staff on the ERP and other software we sell.</p>
         <p class="list-thing">Preparing and showing ad-hoc demos to possible new customers, either at our showroom or by telco.</p>
         <p class="list-thing">On big accounts customers I also do after sales tasks like consulting, training to management staff, looking for new sales opportunities and creating links with them encouraging client loyalty.</p>
