--- a/cv.html
+++ b/cv.html
@@ -39,15 +39,6 @@
         <p class="rela-block list-thing">Networking, Wi-Fi, Mikrotik</p>
         <p class="rela-block list-thing">ERP Software, Consultant, Developer, Implementer</p><br>
 
-        <p class="rela-block caps side-header">Skills</p>
-        <p class="rela-block list-thing">Time Management</p>
-        <p class="rela-block list-thing">Leadership</p>
-        <p class="rela-block list-thing">Adaptability</p>
-        <p class="rela-block list-thing">SQL Expert</p>
-        <p class="rela-block list-thing">Teamwork</p>
-        <p class="rela-block list-thing">Self-taught</p>
-        <p class="rela-block list-thing">Communication</p><br>
-
         <p class="rela-block caps side-header">Education</p>
         <p class="rela-block list-thing">Technical Engineer in Computing Systems, University of Málaga (not finished)</p>
         <p class="rela-block list-thing">Master in Home Automation, University Carlos III of Madrid </p><br>
@@ -70,44 +61,56 @@
 
         <h3>2.006-today Bartolomé Consultores</h3>
         <p class="light">IT Manager</p>
-        <p class="justified">Started here as SysAdmin but evolved over the years. The company was only 12 employees when they hired me but over these years we've grow to almost 40 at the moment and my role now is not only an internal promotion but also the result of my efford and performance.</p>
+        <p class="justified">Started here as SysAdmin but evolved over the years. The company was only 12 employees when they hired me but over these years we've grow to almost 40 at the moment and my role now is not only about an internal promotion but also the result of my effort and performance.</p>
         
      	In the tech area, I can highlight this tasks/projects: 
         <p class="list-thing">Sysadmin, DevOps and leader of the development team.</p>
-        <p class="list-thing">In 2.007 moved all internal NAS/email infraestructure from a classic Windows/Exchange setup to GSuite.</p>
+        <p class="list-thing">In 2.007 moved all internal NAS/email infrastructure from a classic Windows/Exchange setup to GSuite.</p>
         <p class="list-thing">Decision taker on what new software or hardware is interesting to sell.</p>
         <p class="list-thing">Preparing and updating the base OS image to install on every POS we sell (hundreds a year).</p>
-		<p class="list-thing">Now working on a bid data project creating a Bussines Inteligence dashboard for hospitality using data from hundreds of restaurants.</p>
+		<p class="list-thing">Now working on a big data project creating a Business Intelligence dashboard for hospitality using data from hundreds of restaurants.</p>
 		<br>
         In the management and sales area, I can highlight this tasks/projects:
-        <p class="list-thing">Help in the shifting of the company from CashRegisters sellers to POS and ERP Consultant, including changing the company brand and logo.</p>
+        <p class="list-thing">Help in the shifting of the company from Cash Registers sellers to POS and ERP Consultant, including changing the company brand and logo.</p>
         <p class="list-thing">Train new staff on the ERP and other software we sell.</p>
         <p class="list-thing">Preparing and showing ad-hoc demos to possible new customers, either at our showroom or by telco.</p>
         <p class="list-thing">On big accounts customers I also do after sales tasks like consulting, training to management staff, looking for new sales opportunities and creating links with them encouraging client loyalty.</p>
 
-	<br>
-
+	
+	<div class="printer-only"></div>
+	<br>        
+	
         <h3>1.999-2005 Freelance</h3>
         <p class="light"></p>
         <p class="justified">Several works as a freelance, at that moment most of these jobs where high profile and very new technology. Some of them are: </p>
         <p class="list-thing">Technical setup for online streaming of big events.</p>
+        <p class="list-thing">Created an online newspaper, joinning several bloggers efford into one place for "citizen journalism".</p>
         <p class="list-thing">Sysadmin at a high school.</p>
         <p class="list-thing">Develop an online shop while linking it to the existing ERP on a computer dealer.</p>
-        <p class="list-thing">Develop from scratch the billing software for a factory.</p>
         <p class="list-thing">Sysadmin and developer doing custom modules to the existing ERP at EDC Group spanish arm.</p>
+        <p class="list-thing">Develop from scratch the billing software for a factory.</p>
 
 	<br>
-
-		<div class="rela-block caps greyed printer-only">Experience</div>
 
         <h3>1.996-1.999 Campus Party</h3>
         <p class="light">President of #EnRED.</p>
         <p class="justified">Co-founded the #EnRED youth Association, and worked there <b>creating the first Lan-Party in Spain</b>. Main tasks on this job: 
-        <p class="list-thing">Look for sponsors, getting very big companies like Telefonica, 3COM, OKI, Unicaja, DELL, Guillemot..- to work with us.</p>
-        <p class="list-thing">Look for institutions support, from Ayuntamiento de BenalmÃ¡dena to Ministerio de Trabajo, including Injuve, Ministerio de Defensa and many others. </p>
-        <p class="list-thing">Coordinate and execute most of the technical work. Website, local network, servers, tournaments rules, internet connectivity.</p> 
+        <p class="list-thing">Looking for sponsors, getting very big companies like Telefonica, 3COM, OKI, Unicaja, DELL, Guillemot..- to work with us.</p>
+        <p class="list-thing">Looking for institutions support, from Ayuntamiento de Benalmádena to Ministerio de Trabajo, including Injuve, Ministerio de Defensa and many others. </p>
+        <p class="list-thing">Coordinating and executing most of the technical work. Website, local network, servers, tournaments rules, internet connectivity.</p> 
+        <p class="list-thing">Being the public face of the event, on press, radio, TV and so on, <b>including an interview this year (2.019) for the second season of TV Show "Donde estabas entonces"</b>. The show is about the most relevant events on the recent history of Spain and the episode I was interviewed was about year 1.997, the year of the first Campus Party.</p>        
         <p class="list-thing bold">Ended here by selling the brand, how-to and concept to other company. The created franchise was so good it's still working today.</p>
-        
+
+	<br>
+
+		<div class="rela-block caps greyed">Skills</div>
+
+        <p class="list-thing"><b>Fast adaptability</b>. Not only my current position working for a growing SME in the IT world requires that but also you can see the whole resume as a result of this. I can play many different roles and get into new ones without any problem.</p>
+        <p class="list-thing"><b>Leadership</b>. Teamwork, Time Management... I understand you need your team to work with you, not for you. It's the best wat you can get the very best of them.</p>
+        <p class="list-thing"><b>Communication</b>. Not only for leadership that's very important, what you say and how, but also for customers relations, where what you say and how you say it is more important that what you know about the very same thing. </p>
+        <p class="list-thing"><b>Self-taught</b>. Learning every day, specially on the tech skills, I'm now an SQL Expert, Developer, Project Manager, DevOps, Network deployer...</p>
+
+	<br>        
 
     </div>
 </div>
