--- a/cv.html
+++ b/cv.html
@@ -79,7 +79,7 @@
 	
 	<div class="printer-only"></div>
 	<br>        
-	
+
         <h3>1.999-2005 Freelance</h3>
         <p class="light"></p>
         <p class="justified">Several works as a freelance, at that moment most of these jobs where high profile and very new technology. Some of them are: </p>
@@ -106,7 +106,7 @@
 		<div class="rela-block caps greyed">Skills</div>
 
         <p class="list-thing"><b>Fast adaptability</b>. Not only my current position working for a growing SME in the IT world requires that but also you can see the whole resume as a result of this. I can play many different roles and get into new ones without any problem.</p>
-        <p class="list-thing"><b>Leadership</b>. Teamwork, Time Management... I understand you need your team to work with you, not for you. It's the best wat you can get the very best of them.</p>
+        <p class="list-thing"><b>Leadership</b>. Teamwork, Time Management... I understand you need your team to work with you, not for you. It's the best way you can get the very best of them.</p>
         <p class="list-thing"><b>Communication</b>. Not only for leadership that's very important, what you say and how, but also for customers relations, where what you say and how you say it is more important that what you know about the very same thing. </p>
         <p class="list-thing"><b>Self-taught</b>. Learning every day, specially on the tech skills, I'm now an SQL Expert, Developer, Project Manager, DevOps, Network deployer...</p>
 
