--- a/cv.html
+++ b/cv.html
@@ -69,6 +69,7 @@
         <p class="list-thing">Decision taker on what new software or hardware is interesting to sell.</p>
         <p class="list-thing">Preparing and updating the base OS image to install on every POS we sell (hundreds a year).</p>
 		<p class="list-thing">Now working on a big data project creating a Business Intelligence dashboard for hospitality using data from hundreds of restaurants.</p>
+		<p class="list-thing"><b>On COVID-19 emergency alert, worked out how to operate the company bussiness from home for almost everyone. Setup VPNs, route the VoIP PBX, redefine VMs, prepare user-manuals in the WIKI for each one to autoprovision their setup at home. All this in just 3 days to have the initial setup working for every one. Very few improvements over the next week to make all more secure, scale and balance traffic and so on.</b></p>
 		<br>
         In the management and sales area, I can highlight this tasks/projects:
         <p class="list-thing">Help in the shifting of the company from Cash Registers sellers to POS and ERP Consultant, including changing the company brand and logo.</p>
@@ -84,7 +85,7 @@
         <p class="light"></p>
         <p class="justified">Several works as a freelance, at that moment most of these jobs where high profile and very new technology. Some of them are: </p>
         <p class="list-thing">Technical setup for online streaming of big events.</p>
-        <p class="list-thing">Created an online newspaper, joinning several bloggers efford into one place for "citizen journalism".</p>
+        <p class="list-thing">Created an online newspaper (hispalibertas.com), joinning several bloggers efford into one place for "citizen journalism".</p>
         <p class="list-thing">Sysadmin at a high school.</p>
         <p class="list-thing">Develop an online shop while linking it to the existing ERP on a computer dealer.</p>
         <p class="list-thing">Sysadmin and developer doing custom modules to the existing ERP at EDC Group spanish arm.</p>
