--- a/cv.html
+++ b/cv.html
@@ -69,7 +69,8 @@
         <p class="list-thing">Decision taker on what new software or hardware is interesting to sell.</p>
         <p class="list-thing">Preparing and updating the base OS image to install on every POS we sell (hundreds a year).</p>
 		<p class="list-thing">Now working on a big data project creating a Business Intelligence dashboard for hospitality using data from hundreds of restaurants.</p>
-		<p class="list-thing"><b>On COVID-19 emergency alert, worked out how to operate the company bussiness from home for almost everyone. Setup VPNs, route the VoIP PBX, redefine VMs, prepare user-manuals in the WIKI for each one to autoprovision their setup at home. All this in just 3 days to have the initial setup working for every one. Very few improvements over the next week to make all more secure, scale and balance traffic and so on.</b></p>
+		<p class="list-thing">Architected a custom client-server application based on websockets for data synchronization between our cloud server for big data, business intelligence, sales reports… and the POS Systems at the restaurants. From zero to ready to deploy in just over a month.</p>
+		<p class="list-thing"><b>On COVID-19 emergency alert, worked out how to operate the company business from home for almost everyone. Setup VPNs, route the VoIP PBX, redefine VMs, prepare user-manuals in the WIKI for each one to auto provision their setup at home. All this in just 3 days to have the initial setup working for everyone. Very few improvements over the next week to make all more secure, scale and balance traffic and so on.</b></p>
 		<br>
         In the management and sales area, I can highlight this tasks/projects:
         <p class="list-thing">Help in the shifting of the company from Cash Registers sellers to POS and ERP Consultant, including changing the company brand and logo.</p>
