--- a/cv.html
+++ b/cv.html
@@ -13,6 +13,7 @@
 </head>
 <body>
 
+<!-- PRINT TO PDF WITHOUT MARGINS TO GET WHAT'S INTENDED -->
 
 <!-- PAGE STUFF -->
 <div class="rela-block page">
