--- a/cv.html
+++ b/cv.html
@@ -71,8 +71,12 @@
         <p class="list-thing">Preparing and updating the base OS image to install on every POS we sell (hundreds a year).</p>
 		<p class="list-thing">Now working on a big data project creating a Business Intelligence dashboard for hospitality using data from hundreds of restaurants.</p>
 		<p class="list-thing">Architected a custom client-server application based on websockets for data synchronization between our cloud server for big data, business intelligence, sales reports… and the POS Systems at the restaurants. From zero to ready to deploy in just over a month.</p>
-		<p class="list-thing"><b>On COVID-19 emergency alert, worked out how to operate the company business from home for almost everyone. Setup VPNs, route the VoIP PBX, redefine VMs, prepare user-manuals in the WIKI for each one to auto provision their setup at home. All this in just 3 days to have the initial setup working for everyone. Very few improvements over the next week to make all more secure, scale and balance traffic and so on.</b></p>
-		<br>
+		<p class="list-thing"><b>On COVID-19 emergency alert, worked out how to operate the company business from home for almost everyone. Setup VPNs, route the VoIP PBX, redefine VMs, prepare user-manuals in the WIKI for each one to auto provision their setup at home. All this in just 3 days to have the initial setup working for everyone. Some improvements over the next week to make all more secure, scale and balance traffic and so on.</b></p>
+		<p class="list-thing"><b>Over the last year, created a full new web ordering app for restaurants, totally linked to the ERP POS software installed in-site with features like, QR Menu, Ordering from your phone directly to the POS software, calling the waiter, consult your bill, ordering from home (with location, orders schedules, online payment...). A demo can be see at https://mywaiter.cloud/home.php?con=demo</b></p>
+        <p class="list-thing">For our in-house webapp for on-site services, added a zero-contact signature feature so that customers could see, sign and download the signed service order on their phone just by reading a QR code from our technicians phone screen.</p>
+
+        <!--<div class="printer-only"></div>-->
+        <br>
         In the management and sales area, I can highlight this tasks/projects:
         <p class="list-thing">Help in the shifting of the company from Cash Registers sellers to POS and ERP Consultant, including changing the company brand and logo.</p>
         <p class="list-thing">Train new staff on the ERP and other software we sell.</p>
@@ -80,7 +84,7 @@
         <p class="list-thing">On big accounts customers I also do after sales tasks like consulting, training to management staff, looking for new sales opportunities and creating links with them encouraging client loyalty.</p>
 
 	
-	<div class="printer-only"></div>
+
 	<br>        
 
         <h3>1.999-2006 Freelance</h3>
